--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="src/Images/myFullImage.jpg" />
+    <link rel="icon" type="image/jpg" href="/Images/myFullImage.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amrish Pratap Singh</title>
   </head>
