--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpg" href="/Images/myFullImage.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Experienced MERN stack developer proficient in React.js for frontend development, Node.js and Express.js for backend development, and MongoDB for database management. Skilled in creating responsive and user-friendly web applications using Tailwind CSS. Explore my portfolio for examples of my work.">
     <title>Amrish Pratap Singh</title>
   </head>
   <body>
