added meta tags and og meta tags

--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/Images/myFullImage.jpg" />
+    <link rel="icon" type="image/jpg" href="/Images/myImage.jpg" />
+    <link rel="canonical" href="https://www.amrishpratapsingh.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Amrish Pratap Singh">
+    <meta name="keywords" content="MERN stack, React.js, Node.js, Express.js, MongoDB, web development">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="content-language" content="en">
     <meta name="description" content="MERN stack developer proficient in React.js for frontend development, Node.js and Express.js for backend development, and MongoDB for database management. Skilled in creating responsive and user-friendly web applications using Tailwind CSS. Explore my portfolio for examples of my work.">
     <title>Amrish Pratap Singh</title>
+     <!-- Open Graph Meta Tags -->
+     <meta property="og:title" content="Amrish Pratap Singh">
+     <meta property="og:description" content="MERN stack developer proficient in React.js, Node.js, Express.js, and MongoDB. Skilled in creating responsive and user-friendly web applications using Tailwind CSS. Explore my portfolio for examples of my work.">
+     <meta property="og:image" content="/Images/myImage.jpg"> 
+     <meta property="og:url" content="https://www.amrishpratapsingh.com">
+     <meta property="og:type" content="website">
   </head>
   <body>
     <div id="root"></div>
