--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/Images/myImage.jpg" />
+    <link rel="icon" type="image/jpg" href="/Images/myImage.png" />
     <link rel="canonical" href="https://www.amrishpratapsingh.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Amrish Pratap Singh">
@@ -14,7 +14,7 @@
      <!-- Open Graph Meta Tags -->
      <meta property="og:title" content="Amrish Pratap Singh">
      <meta property="og:description" content="MERN stack developer proficient in React.js, Node.js, Express.js, and MongoDB. Skilled in creating responsive and user-friendly web applications using Tailwind CSS. Explore my portfolio for examples of my work.">
-     <meta property="og:image" content="/Images/myImage.jpg"> 
+     <meta property="og:image" content="/Images/portfolio/portfolio.png"> 
      <meta property="og:url" content="https://www.amrishpratapsingh.com">
      <meta property="og:type" content="website">
   </head>
